--- a/intro/backprop.ipynb
+++ b/intro/backprop.ipynb
@@ -67,7 +67,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "f_EC8JkUAHwO",
-        "outputId": "1e1b4637-1f32-4996-f980-2210229285ad",
+        "outputId": "ad59d51c-5d9b-4e74-a454-dc9ed80fb3bb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -94,7 +94,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "JzYShJU4ANmR",
-        "outputId": "68814f8b-d6e3-4319-9753-1866af19cdbb",
+        "outputId": "7c006d4e-d64f-4efd-cb1f-d62ad98304b2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -132,59 +132,59 @@
         "id": "TuU43LLm_Aj1"
       },
       "source": [
-        "class MLP(object):\n",
-        "\n",
-        "  def __init__(self):\n",
-        "    # Initialise with random weights\n",
-        "    self.weights_1 = 0.1 * np.random.normal(size=(3,2))\n",
-        "    self.weights_2 = 0.1 * np.random.normal(size=(3,1))\n",
-        "\n",
-        "  def forward(self, x):\n",
-        "    # Do a forward pass\n",
-        "    if len(x.shape) == 1:\n",
-        "      # Single example, so add a batch dimension of 1\n",
-        "      x = np.expand_dims(x, axis=0)\n",
-        "    # Hidden layer\n",
-        "    z_1 = np.matmul(np.hstack((np.ones(shape=(x.shape[0], 1)), x)), self.weights_1)\n",
-        "    # Apply ReLU activation function\n",
-        "    a_1 = np.maximum(z_1, 0)\n",
-        "    # Output layer\n",
-        "    z_2 = np.matmul(np.hstack((np.ones(shape=(a_1.shape[0], 1)), a_1)), self.weights_2)\n",
-        "    # Linear activation\n",
-        "    # a_2 = z_2\n",
-        "    # Sigmoid activation\n",
-        "    a_2 = 1 / (1 + np.exp(-z_2))\n",
-        "    return z_1, a_1, z_2, a_2\n",
-        "\n",
         "# class MLP(object):\n",
         "\n",
         "#   def __init__(self):\n",
         "#     # Initialise with random weights\n",
-        "#     self.weights_1 = 0.1 * np.random.normal(size=(3, 2))  # weights for input to first hidden layer\n",
-        "#     self.weights_2 = 0.1 * np.random.normal(size=(3, 2))  # weights for first hidden layer to second hidden layer\n",
-        "#     self.weights_3 = 0.1 * np.random.normal(size=(3, 1))  # weights for second hidden layer to output layer\n",
+        "#     self.weights_1 = 0.1 * np.random.normal(size=(3,2))\n",
+        "#     self.weights_2 = 0.1 * np.random.normal(size=(3,1))\n",
         "\n",
         "#   def forward(self, x):\n",
         "#     # Do a forward pass\n",
         "#     if len(x.shape) == 1:\n",
         "#       # Single example, so add a batch dimension of 1\n",
         "#       x = np.expand_dims(x, axis=0)\n",
-        "\n",
-        "#     # Hidden layer 1\n",
+        "#     # Hidden layer\n",
         "#     z_1 = np.matmul(np.hstack((np.ones(shape=(x.shape[0], 1)), x)), self.weights_1)\n",
-        "#     a_1 = np.maximum(z_1, 0)  # ReLU activation\n",
-        "\n",
-        "#     # Hidden layer 2\n",
-        "#     z_2 = np.matmul(np.hstack((np.ones(shape=(a_1.shape[0], 1)), a_1)), self.weights_2)\n",
-        "#     a_2 = np.maximum(z_2, 0)  # ReLU activation\n",
-        "\n",
+        "#     # Apply ReLU activation function\n",
+        "#     a_1 = np.maximum(z_1, 0)\n",
         "#     # Output layer\n",
-        "#     z_3 = np.matmul(np.hstack((np.ones(shape=(a_2.shape[0], 1)), a_2)), self.weights_3)\n",
-        "#     a_3 = 1 / (1 + np.exp(-z_3))  # Sigmoid activation\n",
+        "#     z_2 = np.matmul(np.hstack((np.ones(shape=(a_1.shape[0], 1)), a_1)), self.weights_2)\n",
+        "#     # Linear activation\n",
+        "#     # a_2 = z_2\n",
+        "#     # Sigmoid activation\n",
+        "#     a_2 = 1 / (1 + np.exp(-z_2))\n",
+        "#     return z_1, a_1, z_2, a_2\n",
         "\n",
-        "#     return z_1, a_1, z_2, a_2, z_3, a_3\n"
+        "class MLP(object):\n",
+        "\n",
+        "  def __init__(self):\n",
+        "    # Initialise with random weights\n",
+        "    self.weights_1 = 0.1 * np.random.normal(size=(3, 2))  # weights for input to first hidden layer\n",
+        "    self.weights_2 = 0.1 * np.random.normal(size=(3, 2))  # weights for first hidden layer to second hidden layer\n",
+        "    self.weights_3 = 0.1 * np.random.normal(size=(3, 1))  # weights for second hidden layer to output layer\n",
+        "\n",
+        "  def forward(self, x):\n",
+        "    # Do a forward pass\n",
+        "    if len(x.shape) == 1:\n",
+        "      # Single example, so add a batch dimension of 1\n",
+        "      x = np.expand_dims(x, axis=0)\n",
+        "\n",
+        "    # Hidden layer 1\n",
+        "    z_1 = np.matmul(np.hstack((np.ones(shape=(x.shape[0], 1)), x)), self.weights_1)\n",
+        "    a_1 = np.maximum(z_1, 0)  # ReLU activation\n",
+        "\n",
+        "    # Hidden layer 2\n",
+        "    z_2 = np.matmul(np.hstack((np.ones(shape=(a_1.shape[0], 1)), a_1)), self.weights_2)\n",
+        "    a_2 = np.maximum(z_2, 0)  # ReLU activation\n",
+        "\n",
+        "    # Output layer\n",
+        "    z_3 = np.matmul(np.hstack((np.ones(shape=(a_2.shape[0], 1)), a_2)), self.weights_3)\n",
+        "    a_3 = 1 / (1 + np.exp(-z_3))  # Sigmoid activation\n",
+        "\n",
+        "    return z_1, a_1, z_2, a_2, z_3, a_3\n"
       ],
-      "execution_count": 17,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -200,43 +200,46 @@
       "cell_type": "code",
       "metadata": {
         "id": "GGnwcJdzUs1l",
-        "outputId": "fbe134ff-bf9c-4491-e1cb-0a85b1a2e0c0",
+        "outputId": "ecee3459-4bb5-46ca-e5c5-3edfc54ce386",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 526
         }
       },
       "source": [
         "m = MLP()\n",
         "m.weights_1 = np.array([[0, -1], [1,1], [1,1]], dtype=np.float)\n",
         "m.weights_2 = np.array([[0], [1], [-2]], dtype=np.float)\n",
-        "z_1, a_1, z_2, a_2 = m.forward(X)\n",
+        "# z_1, a_1, z_2, a_2 = m.forward(X)\n",
+        "z_1, a_1, z_2, a_2, z_3, a_3 = m.forward(X)\n",
         "# print(0.25 * np.sum((a_2 - Y)**2))\n",
         "print(f'z_1.shape={z_1.shape}\\na_1.shape={a_1.shape}\\nz_2.shape={z_2.shape}\\na_2.shape={a_2.shape}')\n",
         "print(-np.mean(Y * np.log(a_2) + (1 - Y) * np.log(1 - a_2)))"
       ],
-      "execution_count": 18,
+      "execution_count": 8,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "z_1.shape=(4, 2)\n",
-            "a_1.shape=(4, 2)\n",
-            "z_2.shape=(4, 1)\n",
-            "a_2.shape=(4, 1)\n",
-            "0.503204434039084\n"
-          ]
-        },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-18-64ffd7b2dfe8>:2: DeprecationWarning: `np.float` is a deprecated alias for the builtin `float`. To silence this warning, use `float` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.float64` here.\n",
+            "<ipython-input-8-84e4e43e56e2>:2: DeprecationWarning: `np.float` is a deprecated alias for the builtin `float`. To silence this warning, use `float` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.float64` here.\n",
             "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
             "  m.weights_1 = np.array([[0, -1], [1,1], [1,1]], dtype=np.float)\n",
-            "<ipython-input-18-64ffd7b2dfe8>:3: DeprecationWarning: `np.float` is a deprecated alias for the builtin `float`. To silence this warning, use `float` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.float64` here.\n",
+            "<ipython-input-8-84e4e43e56e2>:3: DeprecationWarning: `np.float` is a deprecated alias for the builtin `float`. To silence this warning, use `float` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.float64` here.\n",
             "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
             "  m.weights_2 = np.array([[0], [1], [-2]], dtype=np.float)\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 3 is different from 2)",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-8-84e4e43e56e2>\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweights_2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# z_1, a_1, z_2, a_2 = m.forward(X)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mz_1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ma_1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mz_2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ma_2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mz_3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ma_3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;31m# print(0.25 * np.sum((a_2 - Y)**2))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'z_1.shape={z_1.shape}\\na_1.shape={a_1.shape}\\nz_2.shape={z_2.shape}\\na_2.shape={a_2.shape}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-7-04023b441876>\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m     \u001b[0;31m# Output layer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 48\u001b[0;31m     \u001b[0mz_3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmatmul\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mones\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma_2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ma_2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweights_3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     49\u001b[0m     \u001b[0ma_3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mz_3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# Sigmoid activation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 3 is different from 2)"
           ]
         }
       ]
@@ -250,7 +253,7 @@
         "num_epochs = 1000\n",
         "learning_rate = 0.1"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -303,7 +306,7 @@
         "weights_1_history = np.array(weights_1_history)\n",
         "weights_2_history = np.array(weights_2_history)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -322,6 +325,65 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Assume X and Y are defined somewhere\n",
+        "num_epochs = 1000\n",
+        "learning_rate = 0.01\n",
+        "\n",
+        "m = MLP()\n",
+        "loss_history = []\n",
+        "weights_1_history = []\n",
+        "weights_2_history = []\n",
+        "\n",
+        "for epoch in range(num_epochs):\n",
+        "    # Do forward pass\n",
+        "    z_1, a_1, z_2, a_2, z_3, a_3 = m.forward(X)\n",
+        "\n",
+        "    # Binary cross-entropy loss\n",
+        "    loss = -np.mean(Y * np.log(a_3) + (1 - Y) * np.log(1 - a_3))\n",
+        "    loss_history.append(loss)\n",
+        "\n",
+        "    if epoch % 100 == 0:\n",
+        "        print(epoch, loss)\n",
+        "\n",
+        "    # Delta_3 has shape(4, 1), the first dimension being the batch dimension\n",
+        "    delta_3 = a_3 - Y\n",
+        "    g_prime_2 = np.heaviside(z_2, 0)\n",
+        "    g_prime_1 = np.heaviside(z_1, 0)\n",
+        "\n",
+        "    # Delta_2 has shape (4, 2)\n",
+        "    delta_2 = np.matmul(delta_3, m.weights_3[1:3, :].T) * g_prime_2\n",
+        "\n",
+        "    # Delta_1 has shape (4, 2)\n",
+        "    delta_1 = np.matmul(delta_2, m.weights_2[1:3, :].T) * g_prime_1\n",
+        "\n",
+        "    # Update weights for layer 3\n",
+        "    m.weights_3[0, :] -= learning_rate * np.sum(delta_3[:, :], axis=0)\n",
+        "    m.weights_3[1:3, :] -= learning_rate * np.matmul(a_2.T, delta_3)\n",
+        "\n",
+        "    # Update weights for layer 2\n",
+        "    m.weights_2[0, :] -= learning_rate * np.sum(delta_2[:, :], axis=0)\n",
+        "    m.weights_2[1:3, :] -= learning_rate * np.matmul(a_1.T, delta_2)\n",
+        "\n",
+        "    # Update weights for layer 1\n",
+        "    m.weights_1[0, :] -= learning_rate * np.sum(delta_1[:, :], axis=0)\n",
+        "    m.weights_1[1:3, :] -= learning_rate * np.matmul(X.T, delta_1)\n",
+        "\n",
+        "    weights_1_history.append(np.copy(m.weights_1))\n",
+        "    weights_2_history.append(np.copy(m.weights_2))\n",
+        "\n",
+        "loss_history = np.array(loss_history)\n",
+        "weights_1_history = np.array(weights_1_history)\n",
+        "weights_2_history = np.array(weights_2_history)"
+      ],
+      "metadata": {
+        "id": "5nxby9jPW76M"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -378,7 +440,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -404,7 +466,7 @@
       "source": [
         "print(m.weights_1)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -429,7 +491,7 @@
       "source": [
         "print(m.weights_2)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -455,7 +517,7 @@
         "z_1, a_1, z_2, a_2 = m.forward(X)\n",
         "print(a_2)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
